kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ss-server-service
  namespace: default
spec:
  selector:
    app: ss-server
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
